peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/Bridgeware_Service_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Various settings for Bridgeware Service</description>
    <label>Bridgeware Service Setting</label>
</CustomObject>