peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <defaultValue>&quot;DEMO&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CONFIG-NAME Parameter that specifies database name to connect to</inlineHelpText>
    <label>Config Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>