peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/Enable_Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Debug Log</label>
    <type>Checkbox</type>
</CustomField>