peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/Generate_Success_Logs__c.field-meta.xml
<CustomField>
    <fullName>Generate_Success_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Success Logs</label>
    <type>Checkbox</type>
</CustomField>