peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/IL10_Osg_ApiKey__c.field-meta.xml
<CustomField>
    <fullName>IL10_Osg_ApiKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IL10 Osg ApiKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>