peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/IL10_Osg_Url__c.field-meta.xml
<CustomField>
    <fullName>IL10_Osg_Url__c</fullName>
    <description>DP-692</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IL10 Osg Url</label>
    <length>150</length>
    <type>Text</type>
</CustomField>