peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/IL10_Password__c.field-meta.xml
<CustomField>
    <fullName>IL10_Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IL10 Password</label>
    <length>80</length>
    <type>Text</type>
</CustomField>