peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/IL10_Uci_Url__c.field-meta.xml
<CustomField>
    <fullName>IL10_Uci_Url__c</fullName>
    <description>for the UCI call, so far it is only one</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IL10 Uci Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>