peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/IL10_Url__c.field-meta.xml
<CustomField>
    <fullName>IL10_Url__c</fullName>
    <description>the endpoint for InfoLease 10 callouts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IL10 Url</label>
    <length>90</length>
    <type>Text</type>
</CustomField>