peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/IL10_Username__c.field-meta.xml
<CustomField>
    <fullName>IL10_Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IL10 Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>