peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/IL10_Zip_Url__c.field-meta.xml
<CustomField>
    <fullName>IL10_Zip_Url__c</fullName>
    <description>for selectZipGeoCode method</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IL10 Zip Url</label>
    <length>150</length>
    <type>Text</type>
</CustomField>