peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/IL9_Osg_Url__c.field-meta.xml
<CustomField>
    <fullName>IL9_Osg_Url__c</fullName>
    <description>for Invoices PDF coming from OSG when contract is Infolease 9</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IL9 Osg Url</label>
    <length>150</length>
    <type>Text</type>
</CustomField>