peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/Mock_Callout__c.field-meta.xml
<CustomField>
    <fullName>Mock_Callout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mock Callout</label>
    <type>Checkbox</type>
</CustomField>