peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/Mock_Callout_createCustomer__c.field-meta.xml
<CustomField>
    <fullName>Mock_Callout_createCustomer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Mocky IO field for createCustomer request. Should return a CCAN.</inlineHelpText>
    <label>Mock_Callout_createCustomer</label>
    <type>Url</type>
</CustomField>