peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/Mock_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Mock_Endpoint__c</fullName>
    <defaultValue>&quot;http://www.mocky.io/v2/54fe5204862a3ae70ddc9617&quot;</defaultValue>
    <description>Something like http://www.mocky.io/v2/54fe5204862a3ae70ddc9617 or http://requestb.in/</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Something like http://www.mocky.io/v2/54fe5204862a3ae70ddc9617 or http://requestb.in/

DO NOT FORGET TO ADD REMOTE SITE SETTINGS!</inlineHelpText>
    <label>Mock Endpoint</label>
    <type>Url</type>
</CustomField>