peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/Rate_City_Field__c.field-meta.xml
<CustomField>
    <fullName>Rate_City_Field__c</fullName>
    <defaultValue>&quot;City__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate City Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>