peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/Rate_Object__c.field-meta.xml
<CustomField>
    <fullName>Rate_Object__c</fullName>
    <defaultValue>&quot;Rate__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>