peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/TCity_Tax_Rate_Field__c.field-meta.xml
<CustomField>
    <fullName>TCity_Tax_Rate_Field__c</fullName>
    <defaultValue>&quot;City_Transit_Tax_Rate__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>TCity Tax Rate Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>