peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/UCI_Config__c.field-meta.xml
<CustomField>
    <fullName>UCI_Config__c</fullName>
    <defaultValue>&quot;SALESFORCE&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>UCI Config</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>