peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/Upsert_Logs__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, all logs will be upserted, else new is inserted everytime</description>
    <label>Upsert Logs</label>
    <type>Checkbox</type>
</CustomField>