peac_dev/force-app/main/default/objects/Bridgeware_Service_Setting__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>